feat(condo): DOMA-10586 added PaymentsFile model and table in UI (#5908)
* feat(condo): DOMA-10586 added payments type switch

* feat(condo): DOMA-10586 added PaymentsFile model

* feat(condo): DOMA-10586 added table hooks

* feat(condo): DOMA-10586 added payments files table

* refactor(condo): DOMA-10586 removed billing context relation from PaymentsFile model

* feat(condo): DOMA-10586 separated payments table and payments files table

* feat(condo): DOMA-10586 added migration

* feat(condo): DOMA-10586 added lang

* feat(condo): DOMA-10586 added tabBarExtraContent prop to tabs component in ui kit

* feat(condo): DOMA-10586 added unique constraint

* feat(condo): DOMA-10586 added access, tests, some refactoring

* feat(condo): DOMA-10586 added sum of payments files total amount query

* feat(condo): DOMA-10586 added checkbox selection and multiple download of payments files using zip

* refactor(condo): DOMA-10586 minor design fixes and PR comment fixes

* refactor(condo): DOMA-10586 refactored model, new migration

* feat(condo): DOMA-10586 added feature flag for showing payments files table

* fix(condo): DOMA-10586 removed tab bar 'jumping' when changing tab

* fix(condo): DOMA-10586 added missing translations

* fix(condo): DOMA-10586 fix import

* fix(condo): DOMA-10586 changed dateLoad to loadedAt

* feat(condo): DOMA-10586 added jszip package

* refactor(condo): DOMA-10586 use new client utils and fixed constraint

* fix(condo): DOMA-10586 fixed test

* feat(condo): DOMA-10586 added bulk tests

* refactor(condo): DOMA-10586 fixes suggested by rabbit

* refactor(condo): DOMA-10586 made status type Select, new migration, test fixes

* fix(condo): DOMA-10586 fixed status type on frontend

* refactor(condo): DOMA-10586 fix cache and downloading files

* feat(condo): DOMA-10586 changed field names, added schema docs, fixed access

* feat(condo): DOMA-10586 fixed comment in access

* feat(condo): DOMA-10586 add after change hook for file adapter

* feat(condo): 

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -156,6 +156,7 @@
   "IncludingFee": "including fee",
   "IncludingServiceCharge": "including service charge",
   "Instruction": "Instruction",
+  "ItemsSelectedCount": "Items selected: {count}",
   "Leave": "Leave",
   "LessParameters": "Less parameters",
   "LessThanMinute": "less then a minute",
@@ -169,7 +170,7 @@
   "MoreParameters": "More parameters",
   "MoreReceiptsWithZeroCharge": "{count, plural, one {# service} other {# services}} with zero charges",
   "MoreTicketsLeft": "And {ticketsLeft, plural, one {# more ticket} other {# more tickets}}",
-  "MultiPayment.status.DONE": "Done",
+  "MultiPayment.status.DONE": "Done (already on your bank account)",
   "MultiPayment.status.ERROR": "Error",
   "MultiPayment.status.PROCESSING": "Processing",
   "Name": "Name",
@@ -231,6 +232,7 @@
   "SelectIsRequired": "Required to select value",
   "SelectOrganizationRequired": "Please select any organization",
   "Selected": "Selected",
+  "SelectedElements": "Selected elements",
   "SendTicketToEmail": "Send ticket to email",
   "SendVerificationCode": "Send verification code",
   "ServerError": "Server error",
@@ -293,7 +295,18 @@
   "accrualsAndPayments.onBoardingModal.text": "For residents to pay their receipts via the Doma mobile app, select the download method and sign the offer. From then on, all payments will be displayed in this section.",
   "accrualsAndPayments.onBoardingModal.title": "About the section",
   "accrualsAndPayments.payments.noPaymentsYet.message": "Residents have not yet paid any receipts. As soon as this happens, the transaction information will appear here.",
+  "accrualsAndPayments.paymentsFiles.noPaymentsFilesYet.message": "We will display them here as soon as they are generated.",
   "accrualsAndPayments.payments.noPaymentsYet.title": "No payments yet",
+  "accrualsAndPayments.paymentsFiles.noPaymentsFilesYet.title": "There are no payment registries yet",
+  "accrualsAndPayments.payments.type.list": "List",
+  "accrualsAndPayments.payments.type.registry": "Registries",
+  "accrualsAndPayments.payments.type.registry.registryNumber": "№ of registry",
+  "accrualsAndPayments.payments.type.registry.paymentOrder": "Payment order",
+  "accrualsAndPayments.payments.type.registry.registryName": "Registry name",
+  "accrualsAndPayments.payments.type.registry.amount": "Amount of payments",
+  "accrualsAndPayments.payments.type.registry.uploadedRecords": "Number of entries",
+  "accrualsAndPayments.payments.type.registry.status.NEW": "New",
+  "accrualsAndPayments.payments.type.registry.status.DOWNLOADED": "Downloaded",
   "accrualsAndPayments.setup.chooseBillingStep.title": "Selecting a billing",
   "accrualsAndPayments.setup.noReturn": "At this point it is impossible to go back to this step",
   "accrualsAndPayments.setup.setupAcquiringStep.title": "Acceptance of the offer",
