--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -156,6 +156,7 @@
   "IncludingFee": "comisión incluida",
   "IncludingServiceCharge": "cargo por servicio incluido",
   "Instruction": "Instrucciones",
+  "ItemsSelectedCount": "Elementos seleccionados: {count}",
   "Leave": "Salir",
   "LessParameters": "Menos parámetros",
   "LessThanMinute": "menos de un minuto",
@@ -169,7 +170,7 @@
   "MoreParameters": "Más parámetros",
   "MoreReceiptsWithZeroCharge": "{count, plural, one {# servicio} few {# servicio} many {# servicios} other {# servicios}} con cargo cero",
   "MoreTicketsLeft": "Más {ticketsLeft, plural, one {# incidencia} few {# incidencia} many {# incidencias} other {# incidencias}}",
-  "MultiPayment.status.DONE": "Completado",
+  "MultiPayment.status.DONE": "Completado (ya en su cuenta corriente)",
   "MultiPayment.status.ERROR": "Error",
   "MultiPayment.status.PROCESSING": "Procesando",
   "Name": "Nombre",
@@ -231,6 +232,7 @@
   "SelectIsRequired": "Debe seleccionar un valor",
   "SelectOrganizationRequired": "Debe seleccionar una organización",
   "Selected": "Seleccionado",
+  "SelectedElements": "Elementos seleccionados",
   "SendTicketToEmail": "Enviar por correo al proveedor",
   "SendVerificationCode": "Enviar código de confirmación",
   "ServerError": "Error del servidor",
@@ -293,7 +295,18 @@
   "accrualsAndPayments.onBoardingModal.text": "Para que los vecinos puedan pagar los recibos a través de la app móvil Doma, seleccione el método de descarga y firme la oferta. A partir de ahora, todos los pagos se mostrarán en esta sección.",
   "accrualsAndPayments.onBoardingModal.title": "Sobre la sección",
   "accrualsAndPayments.payments.noPaymentsYet.message": "Los vecinos no han pagado ningún recibo. Una vez que eso pase aquí aparecerá la información sobre la transacción.",
+  "accrualsAndPayments.paymentsFiles.noPaymentsFilesYet.message": "Los mostraremos aquí tan pronto como se formen.",
   "accrualsAndPayments.payments.noPaymentsYet.title": "Todavía no hay pagos",
+  "accrualsAndPayments.paymentsFiles.noPaymentsFilesYet.title": "Hasta el momento no hay registros de pago",
+  "accrualsAndPayments.payments.type.list": "Lista",
+  "accrualsAndPayments.payments.type.registry": "Registros",
+  "accrualsAndPayments.payments.type.registry.registryNumber": "№ de registro",
+  "accrualsAndPayments.payments.type.registry.paymentOrder": "Orden de pago",
+  "accrualsAndPayments.payments.type.registry.registryName": "Nombre de registro",
+  "accrualsAndPayments.payments.type.registry.amount": "Importe de los pagos",
+  "accrualsAndPayments.payments.type.registry.uploadedRecords": "Número de entradas",
+  "accrualsAndPayments.payments.type.registry.status.NEW": "Nuevo",
+  "accrualsAndPayments.payments.type.registry.status.DOWNLOADED": "Has descargado",
   "accrualsAndPayments.setup.chooseBillingStep.title": "Elegir facturación",
   "accrualsAndPayments.setup.noReturn": "No es posible volver a este paso en este momento",
   "accrualsAndPayments.setup.setupAcquiringStep.title": "Aceptación de oferta",
