feat(condo): DOMA-11315 add new filters

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2987,7 +2987,8 @@
   "ticket.modalQualityControl.title": "Specify the opinion of the resident on the ticket",
   "ticket.modalQualityControlChange.subtitle": "Change the scoring if the current one does not match the feedback from the resident",
   "ticket.modalQualityControlChange.title": "Would you like to change your scoring?",
-  "ticket.newResidentComment": "New resident comment",
+  "ticket.newResidentComment": "New commit from resident",
+  "ticket.newOrganizationComment": "New commit from organization employee",
   "ticket.qualityControl": "Quality control",
   "ticket.qualityControl.bad": "Bad",
   "ticket.qualityControl.filter.label": "Score of the quality control service",
