--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2987,7 +2987,8 @@
   "ticket.modalQualityControl.title": "Уточните мнение жителя по заявке",
   "ticket.modalQualityControlChange.subtitle": "Измените оценку, если текущая не соответствует обратной связи от жителя",
   "ticket.modalQualityControlChange.title": "Хотите изменить оценку?",
-  "ticket.newResidentComment": "Новый комментарий жителя",
+  "ticket.newResidentComment": "Новый комментарий от жителя",
+  "ticket.newOrganizationComment": "Новый комментарий от коллеги",
   "ticket.qualityControl": "Контроль качества",
   "ticket.qualityControl.bad": "Плохо",
   "ticket.qualityControl.filter.label": "Оценка службы контроля качества",
