feat(dev-portal-web): DOMA-11309 improve translations keys

--- a/apps/dev-portal-web/lang/en.json
+++ b/apps/dev-portal-web/lang/en.json
@@ -184,19 +184,21 @@
   "apps.b2c.sections.publishing.publishForm.items.build.select.placeholder": "Select build",
   "apps.b2c.sections.publishing.publishForm.actions.publish": "Publish",
 
-  "docs.widgets.amountDistributionCalculator.paymentSettings": "Payment settings",
-  "docs.widgets.amountDistributionCalculator.paymentAmount": "Payment amount",
-  "docs.widgets.amountDistributionCalculator.paymentFee": "Payment fee",
-  "docs.widgets.amountDistributionCalculator.recipients": "Recipients",
-  "docs.widgets.amountDistributionCalculator.tin": "TIN",
-  "docs.widgets.amountDistributionCalculator.amount": "Sum",
-  "docs.widgets.amountDistributionCalculator.order": "Order",
-  "docs.widgets.amountDistributionCalculator.isFeePayer": "Fee payer",
-  "docs.widgets.amountDistributionCalculator.vor": "Rounding",
-  "docs.widgets.amountDistributionCalculator.overpaymentPart": "Overpayment part",
-  "docs.widgets.amountDistributionCalculator.splitOptions": "Options",
-  "docs.widgets.amountDistributionCalculator.decimalPlaces": "Decimal places",
-  "docs.widgets.amountDistributionCalculator.amountDistributionFieldValue": "Value for amountDistribution field",
-  "docs.widgets.amountDistributionCalculator.splitResultTitle": "Distribution result",
-  "docs.widgets.amountDistributionCalculator.fee": "Fee"
+  "docs.widgets.amountDistributionCalculator.paymentSettings.title": "Payment settings",
+  "docs.widgets.amountDistributionCalculator.paymentSettings.amount.title": "Payment amount",
+  "docs.widgets.amountDistributionCalculator.paymentSettings.fee.title": "Payment fee",
+  "docs.widgets.amountDistributionCalculator.recipients.title": "Recipients",
+  "docs.widgets.amountDistributionCalculator.distribution.fields.tin.title": "TIN",
+  "docs.widgets.amountDistributionCalculator.distribution.fields.amount.title": "Sum",
+  "docs.widgets.amountDistributionCalculator.distribution.fields.order.title": "Order",
+  "docs.widgets.amountDistributionCalculator.distribution.fields.isFeePayer.title": "Fee payer",
+  "docs.widgets.amountDistributionCalculator.distribution.fields.vor.title": "Rounding",
+  "docs.widgets.amountDistributionCalculator.distribution.fields.overpaymentPart.title": "Overpayment part",
+  "docs.widgets.amountDistributionCalculator.splitOptions.title": "Options",
+  "docs.widgets.amountDistributionCalculator.options.decimalPlaces": "Decimal places",
+  "docs.widgets.amountDistributionCalculator.amountDistributionFieldValue.title": "Value for amountDistribution field",
+  "docs.widgets.amountDistributionCalculator.splitResult.title": "Distribution result",
+  "docs.widgets.amountDistributionCalculator.splitResult.tin.title": "TIN",
+  "docs.widgets.amountDistributionCalculator.splitResult.amount.title": "Amount",
+  "docs.widgets.amountDistributionCalculator.splitResult.fee.title": "Fee"
 }
