--- a/apps/dev-portal-web/lang/ru.json
+++ b/apps/dev-portal-web/lang/ru.json
@@ -184,19 +184,21 @@
   "apps.b2c.sections.publishing.publishForm.items.build.select.placeholder": "Выберите сборку",
   "apps.b2c.sections.publishing.publishForm.actions.publish": "Опубликовать",
 
-  "docs.widgets.amountDistributionCalculator.paymentSettings": "Параметры платежа",
-  "docs.widgets.amountDistributionCalculator.paymentAmount": "Сумма платежа",
-  "docs.widgets.amountDistributionCalculator.paymentFee": "Комиссия с платежа",
-  "docs.widgets.amountDistributionCalculator.recipients": "Получатели",
-  "docs.widgets.amountDistributionCalculator.tin": "ИНН",
-  "docs.widgets.amountDistributionCalculator.amount": "Сумма",
-  "docs.widgets.amountDistributionCalculator.order": "Порядок",
-  "docs.widgets.amountDistributionCalculator.isFeePayer": "Платит комиссию",
-  "docs.widgets.amountDistributionCalculator.vor": "Округление",
-  "docs.widgets.amountDistributionCalculator.overpaymentPart": "Часть переплаты",
-  "docs.widgets.amountDistributionCalculator.splitOptions": "Дополнительные настройки",
-  "docs.widgets.amountDistributionCalculator.decimalPlaces": "Знаков после запятой",
-  "docs.widgets.amountDistributionCalculator.amountDistributionFieldValue": "Значение поля amountDistribution",
-  "docs.widgets.amountDistributionCalculator.splitResultTitle": "Результат распределения",
-  "docs.widgets.amountDistributionCalculator.fee": "Комиссия"
+  "docs.widgets.amountDistributionCalculator.paymentSettings.title": "Параметры платежа",
+  "docs.widgets.amountDistributionCalculator.paymentSettings.amount.title": "Сумма платежа",
+  "docs.widgets.amountDistributionCalculator.paymentSettings.fee.title": "Комиссия с платежа",
+  "docs.widgets.amountDistributionCalculator.recipients.title": "Получатели",
+  "docs.widgets.amountDistributionCalculator.distribution.fields.tin.title": "ИНН",
+  "docs.widgets.amountDistributionCalculator.distribution.fields.amount.title": "Сумма",
+  "docs.widgets.amountDistributionCalculator.distribution.fields.order.title": "Порядок",
+  "docs.widgets.amountDistributionCalculator.distribution.fields.isFeePayer.title": "Платит комиссию",
+  "docs.widgets.amountDistributionCalculator.distribution.fields.vor.title": "Округление",
+  "docs.widgets.amountDistributionCalculator.distribution.fields.overpaymentPart.title": "Часть переплаты",
+  "docs.widgets.amountDistributionCalculator.splitOptions.title": "Дополнительные настройки",
+  "docs.widgets.amountDistributionCalculator.options.decimalPlaces": "Знаков после запятой",
+  "docs.widgets.amountDistributionCalculator.amountDistributionFieldValue.title": "Значение поля amountDistribution",
+  "docs.widgets.amountDistributionCalculator.splitResult.title": "Результат распределения",
+  "docs.widgets.amountDistributionCalculator.splitResult.tin.title": "ИНН",
+  "docs.widgets.amountDistributionCalculator.splitResult.amount.title": "Сумма",
+  "docs.widgets.amountDistributionCalculator.splitResult.fee.title": "Комиссия"
 }
