feat(dev-portal-web): DOMA-11309 improve translations keys again

--- a/apps/dev-portal-web/lang/en.json
+++ b/apps/dev-portal-web/lang/en.json
@@ -188,17 +188,17 @@
   "docs.widgets.amountDistributionCalculator.paymentSettings.amount.title": "Payment amount",
   "docs.widgets.amountDistributionCalculator.paymentSettings.fee.title": "Payment fee",
   "docs.widgets.amountDistributionCalculator.recipients.title": "Recipients",
-  "docs.widgets.amountDistributionCalculator.distribution.fields.tin.title": "TIN",
-  "docs.widgets.amountDistributionCalculator.distribution.fields.amount.title": "Sum",
-  "docs.widgets.amountDistributionCalculator.distribution.fields.order.title": "Order",
-  "docs.widgets.amountDistributionCalculator.distribution.fields.isFeePayer.title": "Fee payer",
-  "docs.widgets.amountDistributionCalculator.distribution.fields.vor.title": "Rounding",
-  "docs.widgets.amountDistributionCalculator.distribution.fields.overpaymentPart.title": "Overpayment part",
+  "docs.widgets.amountDistributionCalculator.distributionItemCard.form.items.tin.prefix": "TIN",
+  "docs.widgets.amountDistributionCalculator.distributionItemCard.form.items.amount.prefix": "Sum",
+  "docs.widgets.amountDistributionCalculator.distributionItemCard.form.items.order.prefix": "Order",
+  "docs.widgets.amountDistributionCalculator.distributionItemCard.form.items.isFeePayer.prefix": "Fee payer",
+  "docs.widgets.amountDistributionCalculator.distributionItemCard.form.items.vor.prefix": "Rounding",
+  "docs.widgets.amountDistributionCalculator.distributionItemCard.form.items.overpaymentPart.prefix": "Overpayment part",
   "docs.widgets.amountDistributionCalculator.splitOptions.title": "Options",
   "docs.widgets.amountDistributionCalculator.options.decimalPlaces": "Decimal places",
   "docs.widgets.amountDistributionCalculator.amountDistributionFieldValue.title": "Value for amountDistribution field",
-  "docs.widgets.amountDistributionCalculator.splitResult.title": "Distribution result",
-  "docs.widgets.amountDistributionCalculator.splitResult.tin.title": "TIN",
-  "docs.widgets.amountDistributionCalculator.splitResult.amount.title": "Amount",
-  "docs.widgets.amountDistributionCalculator.splitResult.fee.title": "Fee"
+  "docs.widgets.amountDistributionCalculator.splitResultCard.title": "Distribution result",
+  "docs.widgets.amountDistributionCalculator.splitResult.fields.tin.label": "TIN",
+  "docs.widgets.amountDistributionCalculator.splitResult.fields.amount.label": "Amount",
+  "docs.widgets.amountDistributionCalculator.splitResult.fields.fee.label": "Fee"
 }
