--- a/apps/dev-portal-web/lang/ru.json
+++ b/apps/dev-portal-web/lang/ru.json
@@ -188,17 +188,17 @@
   "docs.widgets.amountDistributionCalculator.paymentSettings.amount.title": "Сумма платежа",
   "docs.widgets.amountDistributionCalculator.paymentSettings.fee.title": "Комиссия с платежа",
   "docs.widgets.amountDistributionCalculator.recipients.title": "Получатели",
-  "docs.widgets.amountDistributionCalculator.distribution.fields.tin.title": "ИНН",
-  "docs.widgets.amountDistributionCalculator.distribution.fields.amount.title": "Сумма",
-  "docs.widgets.amountDistributionCalculator.distribution.fields.order.title": "Порядок",
-  "docs.widgets.amountDistributionCalculator.distribution.fields.isFeePayer.title": "Платит комиссию",
-  "docs.widgets.amountDistributionCalculator.distribution.fields.vor.title": "Округление",
-  "docs.widgets.amountDistributionCalculator.distribution.fields.overpaymentPart.title": "Часть переплаты",
+  "docs.widgets.amountDistributionCalculator.distributionItemCard.form.items.tin.prefix": "ИНН",
+  "docs.widgets.amountDistributionCalculator.distributionItemCard.form.items.amount.prefix": "Сумма",
+  "docs.widgets.amountDistributionCalculator.distributionItemCard.form.items.order.prefix": "Порядок",
+  "docs.widgets.amountDistributionCalculator.distributionItemCard.form.items.isFeePayer.prefix": "Платит комиссию",
+  "docs.widgets.amountDistributionCalculator.distributionItemCard.form.items.vor.prefix": "Округление",
+  "docs.widgets.amountDistributionCalculator.distributionItemCard.form.items.overpaymentPart.prefix": "Часть переплаты",
   "docs.widgets.amountDistributionCalculator.splitOptions.title": "Дополнительные настройки",
   "docs.widgets.amountDistributionCalculator.options.decimalPlaces": "Знаков после запятой",
   "docs.widgets.amountDistributionCalculator.amountDistributionFieldValue.title": "Значение поля amountDistribution",
-  "docs.widgets.amountDistributionCalculator.splitResult.title": "Результат распределения",
-  "docs.widgets.amountDistributionCalculator.splitResult.tin.title": "ИНН",
-  "docs.widgets.amountDistributionCalculator.splitResult.amount.title": "Сумма",
-  "docs.widgets.amountDistributionCalculator.splitResult.fee.title": "Комиссия"
+  "docs.widgets.amountDistributionCalculator.splitResultCard.title": "Результат распределения",
+  "docs.widgets.amountDistributionCalculator.splitResult.fields.tin.label": "ИНН",
+  "docs.widgets.amountDistributionCalculator.splitResult.fields.amount.label": "Сумма",
+  "docs.widgets.amountDistributionCalculator.splitResult.fields.fee.label": "Комиссия"
 }
