feat(dev-portal-web): DOMA-11307 sandbox was added to en page

--- a/apps/dev-portal-web/docs/api/cases/invoices/amount-distribution.en.mdx
+++ b/apps/dev-portal-web/docs/api/cases/invoices/amount-distribution.en.mdx
@@ -92,3 +92,8 @@ Distribution result:
 | recipient2 | 96.66  |
 | recipient3 | 96.67  |
 | fee        | 10     |
+
+## Sandbox
+
+The sandbox below allows for distribution calculations.
+<AmountDistributionCalculator />
