feat(condo): DOMA-11422 added hot water billing category

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -621,6 +621,8 @@
   "billing.category.trash.name.declined": "trash",
   "billing.category.water_removal.name": "Water removal",
   "billing.category.insurance.name": "Insurance",
+  "billing.category.hot_water.name": "Hot water",
+  "billing.category.hot_water.name.declined": "hot water",
   "callRecord.call": "Call",
   "callRecord.callType.incoming": "Incoming",
   "callRecord.callType.outgoing": "Outgoing",
